<resources>
    <string name="app_name">Englock</string>
    <string name="active">Kích hoạt</string>
    <string name="de_active">Hủy kích hoạt</string>
    <string name="not_active">Chưa kích hoạt</string>
    <string name="was_active">Đã kích hoạt</string>
    <string name="introduce">Giới thiệu</string>
    <string name="setting">Cài đặt</string>
    <string name="feedback">Phản hồi</string>
    <string name="rate">Đánh giá</string>
    <string name="about">Thông tin</string>
    <string name="disable_lock_screen">Tắt khóa hệ thống</string>
    <string name="choice_topic">Chọn chủ đề</string>
    <string name="notify_dialog">Thông báo</string>
    <string name="allow_disable_active_mesage">Bạn thực sự muốn tắt :(</string>
    <string name="allow">Yes</string>
    <string name="cancel">Hủy</string>
    <string name="disable">Tắt</string>
    <string name="next">Tiếp theo</string>
    <string name="skip">Đóng</string>
    <string name="start">Bắt đầu</string>

    <string name="slide_1_title">@string/app_name</string>
    <string name="slide_1_desc">Một sản phẩm đến từ UET team giúp bạn học tiếng Anh một cách hiệu quả!</string>

    <string name="slide_2_title">Chủ đề đa dạng</string>
    <string name="slide_2_desc">Với rất nhiều chủ đề, việc học tiếng Anh của bạn sẽ dễ dàng hơn bao giờ hết!</string>

    <string name="slide_3_title">Giao diện thân thiện</string>
    <string name="slide_3_desc">Giao diện đơn giản, dễ dùng  sẽ giúp bạn không bị nhàm chán khi học tập!</string>

    <string name="slide_4_title">Good luck!!!</string>
    <string name="slide_4_desc">Chúc bạn có những giây phút học tập hiệu quả cùng Study lock!</string>

    <string name="press_again_to_quit">Nhấn lần nữa để thoát</string>
    <string name="accept">Đồng ý</string>
    <string name="request_permission_message">Vui lòng cho phép sử dụng quyền vẽ trên ứng dụng khác</string>
    <string name="enter_password">Nhập mật khẩu</string>
    <string name="enter_pasword_message">Thiết lập mật khẩu trong trường hợp cần mở khóa gấp</string>
    <string name="re_enter_password">Nhập lại mật khẩu</string>
    <string name="enter_password_fail">Mật khẩu sai, nhập lại</string>
    <string name="option_password">Thiết lập mật khẩu</string>
    <string name="choice_home_screen">Chọn hình nền</string>
    <string name="choice_right_answer_to_unlock">Chọn nghĩa đúng để mở khóa</string>
    <string name="send">Gửi</string>
    <string name="enter_your_email">Nhập email</string>
    <string name="enter_content">Nhập nội dung</string>
    <string name="content_cannot_be_empty">Không được để trống</string>
    <string name="thank_to_feedback">Cám ơn bạn đã đóng góp ý kiến!</string>
    <string name="set_title">Đặt tiêu đề</string>
    <string name="enter_title">Nhập tiêu đề</string>
    <string name="email_team_lead">thanhnamitit@gmail.com</string>
    <string name="using_password">Sử dụng mật khẩu</string>
    <string name="change_password">Thay mật khẩu</string>
    <string name="active_password_to_use">Vui lòng kích hoạt sử dụng mật khẩu để chọn chức năng này</string>
    <string name="dev_by">Phát triển bởi</string>
    <string name="author">Uet team</string>
    <string name="email_address">Địa chỉ email</string>
    <string name="time">Thời gian</string>
    <string name="time_create_app">Tháng 8 năm 2016</string>
    <string name="thank_user">Cám ơn bạn!</string>
    <string name="train">Luyện tập</string>
    <string name="more_app">Ứng dụng hay</string>
    <string name="mini_game">Mini game</string>
    <string name="statistics">Thống kê</string>
    <string name="mini_story">Truyện ngắn</string>
    <string name="introduce_lock_screen">Hãy thử khóa màn hình để thấy điều thú vị ^^!</string>
    <string name="active_success">Kích hoạt thành công</string>

    <string name="select">Chọn</string>
    <string name="unselect">Bỏ chọn</string>
    <string name="list_word">Danh sách</string>
    <string name="add_topic">Thêm chủ đề</string>
    <string name="delete_topic">Xoá</string>
    <string name="back">Trở lại</string>
    <string name="add_word">Thêm từ</string>
    <string name="enter_topic_name">Nhập tên chủ đề</string>
    <string name="create_topic">Tạo chủ đề</string>
    <string name="create">Tạo</string>
    <string name="name_canot_empty">Tên chủ đề không được để trống</string>
    <string name="error_topic_exists">Chủ đề đã tồn tại</string>
    <string name="create_topic_success">Chủ đề %s đã được tạo!!!</string>
    <string name="preaparing_data">Đang chuẩn bị dữ liệu</string>
    <string name="please_wait">Vui lòng chờ</string>
</resources>
