<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="activity"
            type="com.supersaiyan.englock.activity.MainActivity"></variable>

        <variable
            name="actived"
            type="boolean"></variable>

    </data>

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="16dp">

        <LinearLayout
            android:id="@+id/layout_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical"
            android:padding="2dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3">

                <com.supersaiyan.englock.view.customview.SquareLinearLayout
                    android:id="@+id/btn_active"
                    android:layout_width="1dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_item_main_top_left"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="@{(theView)->activity.activeClick()}"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/icon_size_activity_main"
                        android:layout_height="@dimen/icon_size_activity_main"
                        android:background="@{actived?@drawable/shape_circle_active:@drawable/shape_circle_blue_grey}"
                        android:padding="@dimen/icon_pading_activity_main"
                        android:scaleType="centerCrop"
                        android:src="@{actived?@drawable/ic_tick_v:@drawable/ic_active}" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:gravity="center"
                        android:text="@{actived?@string/de_active:@string/active}"
                        android:textColor="@color/main_text_color"
                        android:textStyle="bold" />
                </com.supersaiyan.englock.view.customview.SquareLinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="@dimen/stroke_margin_activity_main"
                    android:background="@color/view_stroke"></View>

                <com.supersaiyan.englock.view.customview.SquareLinearLayout
                    android:layout_width="1dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_main_item"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="@{(theView)->activity.chooseTopicClick()}"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/icon_size_activity_main"
                        android:layout_height="@dimen/icon_size_activity_main"
                        android:background="@drawable/shape_circle_blue"
                        android:padding="@dimen/icon_pading_activity_main"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_topic" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:gravity="center"
                        android:text="@string/choice_topic"
                        android:textColor="@color/main_text_color"
                        android:textStyle="bold" />
                </com.supersaiyan.englock.view.customview.SquareLinearLayout>


                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="@dimen/stroke_margin_activity_main"
                    android:background="@color/view_stroke"></View>

                <com.supersaiyan.englock.view.customview.SquareLinearLayout
                    android:layout_width="1dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_main_item"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="@{(theView)->activity.findWordByLocation()}"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/icon_size_activity_main"
                        android:layout_height="@dimen/icon_size_activity_main"
                        android:background="@drawable/shape_circle_red"
                        android:padding="@dimen/icon_pading_activity_main"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_story" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:gravity="center"
                        android:text="@string/train"
                        android:textColor="@color/main_text_color"
                        android:textStyle="bold" />
                </com.supersaiyan.englock.view.customview.SquareLinearLayout>
            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/stroke_margin_activity_main"
                android:layout_marginRight="@dimen/stroke_margin_activity_main"
                android:background="@color/view_stroke"></View>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3">

                <com.supersaiyan.englock.view.customview.SquareLinearLayout
                    android:layout_width="1dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_main_item"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/icon_size_activity_main"
                        android:layout_height="@dimen/icon_size_activity_main"
                        android:background="@drawable/shape_circle_purple"
                        android:padding="@dimen/icon_pading_activity_main"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_statistics" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:gravity="center"
                        android:text="@string/statistics"
                        android:textColor="@color/main_text_color"
                        android:textStyle="bold" />
                </com.supersaiyan.englock.view.customview.SquareLinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/stroke_margin_activity_main"
                    android:background="@color/view_stroke"></View>

                <com.supersaiyan.englock.view.customview.SquareLinearLayout
                    android:layout_width="1dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_main_item"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="@{(theView)->activity.communicationClick()}"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/icon_size_activity_main"
                        android:layout_height="@dimen/icon_size_activity_main"
                        android:background="@drawable/shape_circle_green"
                        android:padding="15dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_public" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:gravity="center"
                        android:text="@string/mini_story"
                        android:textColor="@color/main_text_color"
                        android:textStyle="bold" />
                </com.supersaiyan.englock.view.customview.SquareLinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/stroke_margin_activity_main"
                    android:background="@color/view_stroke"></View>

                <com.supersaiyan.englock.view.customview.SquareLinearLayout
                    android:layout_width="1dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_main_item"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="4dp">

                    <ImageView
                        android:layout_width="@dimen/icon_size_activity_main"
                        android:layout_height="@dimen/icon_size_activity_main"
                        android:background="@drawable/shape_circle_orange"
                        android:padding="@dimen/icon_pading_activity_main"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_settings" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:gravity="center"
                        android:text="@string/setting"
                        android:textColor="@color/main_text_color"
                        android:textStyle="bold" />

                </com.supersaiyan.englock.view.customview.SquareLinearLayout>


            </TableRow>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</layout>
